--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
@@ -109,6 +109,7 @@
             {% endfor %}
             <tbody>
         </table>
+        <a href="{{ path('') }}"> <button type="submit" class="btn btn-lg btn-success"></button></a>
     </div>
 </div>
 {% endif %}
