--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
@@ -39,7 +39,6 @@
                             <form action="{{ path('panier.add') }}" method="post">
                                 <input name="id" type="hidden" value="{{ produit.id }}">
                                 <select name="stock" class="form-control ">
-                                        <option value="quantité" {% if produit.stock is not defined %}selected{% endif %}>quantité</option>
                                             {% if (produit.stock-panierStock) > 10 %}
                                                 {% for i in 1..10%}
                                                     <option value="{{ i }}">
@@ -54,7 +53,7 @@
                                                 {% endfor %}
                                             {% endif %}
                                 </select>
-                                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon glyphicon-plus"></span>Ajouter</button>
+                                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon glyphicon-plus"></span> Ajouter</button>
                             </form>
                                 {% else %}
                                 Plus de livres en stock
@@ -71,7 +70,7 @@
         <table class="table table-responsive table-bordered">
             <caption><h4>Mon panier</h4></caption>
             <thead>
-            <tr class="table text-capitalize"><th>nom</th><th>quantité</th><th>prix</th><th>photo</th>
+            <tr class="table text-capitalize"><th>nom</th><th>quantité</th><th>prix</th><th>prix total</th><th>photo</th>
                 {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
                     <th>opérations</th>
                 {% endif %}
@@ -82,9 +81,11 @@
             </tr>
             </thead>
             <tbody>
+            {% set prix_total=0 %}
             {% for ligne in panier if panier is not empty %}
+                {% set prix_total=prix_total+ligne.prix*ligne.quantite %}
                 <tr>
-                    <td>{{ligne.nom}}</td><td>{{ligne.quantite}}</td><td>{{ligne.prix}}</td>
+                    <td>{{ligne.nom}}</td><td>{{ligne.quantite}}</td><td>{{ligne.prix}}</td><td>{{ligne.prix*ligne.quantite}}</td>
                     <td>
                         <img style="width:40px;height:40px" src="{{asset('images/')}}{{ligne.photo}}" alt="image de {{ligne.nom}}" >
                     </td>
@@ -100,16 +101,25 @@
                                             </option>
                                         {% endfor %}
                                     </select>
-                                    <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span>supprimer</button>
+                                    <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span> supprimer</button>
                                 </form>
                             </div>
                         </td>
                     {% endif %}
                 </tr>
             {% endfor %}
+            {% if prix_total!=0 %}
+                <tr>
+                    <td colspan="5" >
+                        Valeur total : {{ prix_total }}
+                    </td>
+                    <td>
+                        <a><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span> check-out</button></a>
+                    </td>
+                </tr>
+            {% endif %}
             <tbody>
         </table>
-        <a href="{{ path('') }}"> <button type="submit" class="btn btn-lg btn-success"></button></a>
     </div>
 </div>
 {% endif %}
