--- a/Projet2_base_silex/App/View/frontOff/Commande/ValidCommand.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/Commande/ValidCommand.html.twig
@@ -43,6 +43,7 @@
                 {% endfor %}
                 <tbody>
             </table>
+            <a href="#"><button class="btn btn-lg btn-success">Valider Commande</button></a>
         </div>
         </div>
     {% endif %}
