--- a/Projet2_base_silex/App/View/nav_backOff.html.twig
+++ b/Projet2_base_silex/App/View/nav_backOff.html.twig
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{{ path('produit.index') }}">
+            <a href="{{ path('accueil') }}">
                 <img class=""  style="width: 50px;height: 50px" src="{{asset('images/manga.png')}}" alt="">
             </a>
         </div>
