--- a/Projet2_base_silex/App/View/frontOff/Commande/ValidCommand.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/Commande/ValidCommand.html.twig
@@ -26,7 +26,7 @@
                             Valeur total : {{ prix_total }}
                         </td>
                         <td>
-                            <a href="{{ path('Commande.ValidCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span>Passer la commande</button></a>
+                            <a href="{{ path('Commande.CreateCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span>Passer la commande</button></a>
                         </td>
                     </tr>
                 {% endif %}
