--- a/Projet2_base_silex/App/View/nav_home.html.twig
+++ b/Projet2_base_silex/App/View/nav_home.html.twig
@@ -15,7 +15,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Produits<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ path('panier.show') }}">afficher les produits</a></li>
+                        <li><a href="{{ path('panier.Client') }}">afficher les produits</a></li>
                     </ul>
                 </li>
             </ul>
