--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
@@ -5,7 +5,7 @@
         <table class="table table-hover">
             <caption><h4>Nos produits</h4></caption>
             <thead>
-            <tr class="table table-responsive text-capitalize"><th>nom</th><th>type</th><th>prix</th><th>photo</th>
+            <tr class="text-capitalize"><th>nom</th><th>type</th><th>prix</th><th>photo</th>
                 {% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
                     <th class="text-center">opérations</th>
                 {% endif %}
