--- a/Projet2_base_silex/App/View/nav_frontOff.html.twig
+++ b/Projet2_base_silex/App/View/nav_frontOff.html.twig
@@ -15,7 +15,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Produits<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ path('panier.Client') }}">afficher les produits</a></li>
+                        <li><a href="{{ path('panier.show') }}">afficher les produits</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -29,7 +29,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>{% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
-                <li><span class="text-info">Connecté en tant que : {{ app.session.get('login') }}</span></li>
+                <li><a href="#">Bienvenue {{ app.session.get('login') }}</a></li>
                 <li><a href="{{ path('user.logout')  }}"><span class="glyphicon glyphicon-log-out"></span> Se Déconnecter</a></li>
                 {% else %}
                 <li><a href="{{ path('user.login')  }}">Se connecter</a></li>
