--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
@@ -1,17 +1,7 @@
 {% extends "layout.html.twig" %}
 {% block contenu %}
-<div class="row col-lg-12">
-    <div class="col-lg-8">
-        <table class="table table-hover">
-            <caption><h4>Nos produits</h4></caption>
-            <thead>
-            <tr class="text-capitalize"><th>nom</th><th>type</th><th>prix</th><th>photo</th>
-                {% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
-                    <th class="text-center">opérations</th>
-                {% endif %}
-            </tr>
-            </thead>
-            <tbody>
+<div class="row">
+    <div class="col-lg-12">
             {% for produit in data if data is not empty %}
                 {% set breakloop = false %}
                 {% set panierStock = 0 %}
@@ -21,108 +11,49 @@
                         {% set breakloop=true %}
                     {% endif %}
                 {% endfor %}
-
-                <tr class="">
-                    <td class="text-capitalize"><h4>{{produit.nom}}</h4></td><td>{{produit.libelle}}</td><td>{{produit.prix}}</td>
-                    <td>
-                        <img style="width:90px;height:120px" src="{{asset('images/')}}{{produit.photo}}" alt="image de {{produit.libelle}}" >
-                    </td>
-                    {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
-                        <td class="text-center">
-                            <a href="{{ path('produit.edit', {id: produit.id}) }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon glyphicon-edit"></span>Modifier</button></a>
-                            <a href="{{ path('produit.delete', {id: produit.id}) }}"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span>supprimer</button></a>
-                        </td>
-                    {% endif %}
-                    {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
-                        <td class="text-center">
+                <div class="col-lg-3">
+                    <div class="produit">
+                        <img style="width:150px;height:240px" src="{{asset('images/')}}{{produit.photo}}" alt="image de {{produit.libelle}}" >
+                        <h4>{{produit.nom}}</h4>
+                        <p>{{produit.libelle}}</p>
+                        <p>{{produit.prix}} €</p>
+                        {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
+                            <td class="text-center">
+                                <a href="{{ path('produit.edit', {id: produit.id}) }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon glyphicon-edit"></span>Modifier</button></a>
+                                <a href="{{ path('produit.delete', {id: produit.id}) }}"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span>supprimer</button></a>
+                            </td>
+                        {% endif %}
+                        {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
+                        <p class="text-center">
                             {% if produit.stock!=panierStock %}
-                            <form action="{{ path('panier.add') }}" method="post">
-                                <input name="id" type="hidden" value="{{ produit.id }}">
-                                <select name="stock" class="">
-                                            {% if (produit.stock-panierStock) > 10 %}
-                                                {% for i in 1..10%}
-                                                    <option value="{{ i }}">
-                                                        {{ i }}
-                                                    </option>
-                                                {% endfor %}
-                                            {% else %}
-                                                {% for i in 1..(produit.stock-panierStock)%}
-                                                    <option value="{{ i }}">
-                                                        {{ i }}
-                                                    </option>
-                                                {% endfor %}
-                                            {% endif %}
-                                </select>
-                                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon glyphicon-plus"></span> Ajouter</button>
-                            </form>
-                                {% else %}
+                                <form action="{{ path('panier.add') }}" method="post">
+                                    <input name="id" type="hidden" value="{{ produit.id }}">
+                                    <select name="stock" class="">
+                                        {% if (produit.stock-panierStock) > 10 %}
+                                            {% for i in 1..10%}
+                                                <option value="{{ i }}">
+                                                    {{ i }}
+                                                </option>
+                                            {% endfor %}
+                                        {% else %}
+                                            {% for i in 1..(produit.stock-panierStock)%}
+                                                <option value="{{ i }}">
+                                                    {{ i }}
+                                                </option>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </select>
+                                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon glyphicon-plus"></span> Ajouter</button>
+                                </form>
+                            {% else %}
                                 Plus de livres en stock
                             {% endif %}
-                        </td>
+                        </p>
+                    </div>
                     {% endif %}
-                </tr>
+                </div>
             {% endfor %}
-            <tbody>
-        </table>
     </div>
-{% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
-    <div class="col-lg-4 ">
-        <table class="table table-responsive table-bordered">
-            <caption><h4>Mon panier</h4></caption>
-            <thead>
-            <tr class="table text-capitalize"><th>nom</th><th>quantité</th><th>prix total</th><th>photo</th>
-                {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
-                    <th>opérations</th>
-                {% endif %}
-                {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
-                    <th>opérations</th>
-                {% endif %}
-
-            </tr>
-            </thead>
-            <tbody>
-            {% set prix_total=0 %}
-            {% for ligne in panier if panier is not empty %}
-                {% set prix_total=prix_total+ligne.prix*ligne.quantite %}
-                <tr>
-                    <td>{{ligne.nom}}</td><td>{{ligne.quantite}}</td><td>{{ligne.prix*ligne.quantite}}</td>
-                    <td>
-                        <img style="width:40px;height:40px" src="{{asset('images/')}}{{ligne.photo}}" alt="image de {{ligne.nom}}" >
-                    </td>
-                    {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
-                        <td>
-                            <div class="row">
-                                <form method="POST" action="{{ path('panier.delete') }}">
-                                    <input name="id" type="hidden" value="{{ ligne.idPanier }}">
-                                    <select name="delete_quantite" class="">
-                                        {% for i in 1..ligne.quantite%}
-                                            <option value="{{ i }}">
-                                                {{ i }}
-                                            </option>
-                                        {% endfor %}
-                                    </select>
-                                    <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span> supprimer</button>
-                                </form>
-                            </div>
-                        </td>
-                    {% endif %}
-                </tr>
-            {% endfor %}
-            {% if prix_total!=0 %}
-                <tr>
-                    <td colspan="4" >
-                        Valeur total : {{ prix_total }}
-                    </td>
-                    <td>
-                        <a href="{{ path('Commande.ValidCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span> check-out</button></a>
-                    </td>
-                </tr>
-            {% endif %}
-            <tbody>
-        </table>
-
     </div>
-</div>
-{% endif %}
 {% endblock %}
 
