--- a/Projet2_base_silex/App/View/nav_frontOff.html.twig
+++ b/Projet2_base_silex/App/View/nav_frontOff.html.twig
@@ -28,6 +28,7 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ path('panier.showPanier') }}">Panier<span class="glyphicon glyphicon-shopping-cart"></span></a></li>
                 <li>{% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
                 <li><a href="#">Bienvenue {{ app.session.get('login') }}</a></li>
                 <li><a href="{{ path('user.logout')  }}"><span class="glyphicon glyphicon-log-out"></span> Se Déconnecter</a></li>
