--- a/Projet2_base_silex/web/assets/css/style.css
+++ b/Projet2_base_silex/web/assets/css/style.css
@@ -23,3 +23,11 @@ th{
     box-shadow: 10px 10px 10px 10px #656565;
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=10);
 }
+
+.produit{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 20px;
+
+}
