--- a/Projet2_base_silex/App/View/nav_frontOff.html.twig
+++ b/Projet2_base_silex/App/View/nav_frontOff.html.twig
@@ -21,7 +21,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Commande<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('Commande.show') }}">mes commandes</a></li>
+                            <li><a href="#">mes commandes</a></li>
                             <li><a href="#">mes coordonnées</a></li>
                         </ul>
                     </li>
