--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/panierShow.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/panierShow.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 {% block contenu %}
 {% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
-    <div class="col-lg-4 ">
+    <div class="col-lg-8 col-lg-offset-2">
         <table class="table table-responsive table-bordered">
             <caption><h4>Mon panier</h4></caption>
             <thead>
@@ -26,30 +26,28 @@
                     </td>
                     {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
                         <td>
-                            <div class="row">
-                                <form method="POST" action="{{ path('panier.delete') }}">
-                                    <input name="id" type="hidden" value="{{ ligne.idPanier }}">
-                                    <select name="delete_quantite" class="">
-                                        {% for i in 1..ligne.quantite%}
-                                            <option value="{{ i }}">
-                                                {{ i }}
-                                            </option>
-                                        {% endfor %}
-                                    </select>
-                                    <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span> supprimer</button>
-                                </form>
-                            </div>
+                            <form method="POST" action="{{ path('panier.delete') }}">
+                                <input name="id" type="hidden" value="{{ ligne.idPanier }}">
+                                <select name="delete_quantite" class="">
+                                    {% for i in 1..ligne.quantite%}
+                                        <option value="{{ i }}">
+                                            {{ i }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                                <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span> supprimer</button>
+                            </form>
                         </td>
                     {% endif %}
                 </tr>
             {% endfor %}
             {% if prix_total!=0 %}
                 <tr>
-                    <td colspan="4" >
-                        Valeur total : {{ prix_total }}
+                    <td colspan="4" class="text-info" >
+                        <h4>Valeur total : {{ prix_total }}</h4>
                     </td>
                     <td>
-                        <a href="{{ path('Commande.ValidCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span> check-out</button></a>
+                        <a href="{{ path('Commande.ValidCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span>Passer la commande</button></a>
                     </td>
                 </tr>
             {% endif %}
