--- a/Projet2_base_silex/App/View/frontOff/Commande/RecapCommands.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/Commande/RecapCommands.html.twig
@@ -6,9 +6,16 @@
                 <table class="table table-responsive table-bordered">
                     <caption><h4>Mes Commandes</h4></caption>
                     <thead>
-                    <tr class="table text-capitalize"><th>Numéro de Commande</th><th>Status</th>
+                    <tr class="table text-capitalize"><th>Numéro de Commande</th><th>Date d'achat</th><th>Status</th>
                     </tr>
                     </thead>
+                    <tbody>
+                    {% for commande in data if data is not empty %}
+                    <tr class="">
+                        <td>{{ commande.id }}</td><td>{{ commande.date_achat }}</td><td>{{ commande.libelle }}</td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
                 </table>
             </div>
         </div>
