--- a/Projet2_base_silex/App/View/nav_backOff.html.twig
+++ b/Projet2_base_silex/App/View/nav_backOff.html.twig
@@ -24,7 +24,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">commandes<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#"> gestion des commandes </a></li>
+                        <li><a href="{{ path('Commande.show') }}"> gestion des commandes </a></li>
                         <li><a href="#"> gestion des clients </a></li>
                     </ul>
                 </li>
