Modif apparence show et panier

--- a/Projet2_base_silex/web/assets/css/style.css
+++ b/Projet2_base_silex/web/assets/css/style.css
@@ -29,5 +29,9 @@ th{
     margin-right: auto;
     text-align: center;
     padding: 20px;
+}
 
+.produit:hover{
+    background-color: slategrey;
+    color: whitesmoke;
 }
