--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
@@ -13,15 +13,15 @@
                 {% endfor %}
                 <div class="col-lg-3">
                     <div class="produit">
-                        <img style="width:150px;height:240px" src="{{asset('images/')}}{{produit.photo}}" alt="image de {{produit.libelle}}" >
+                        <img style="width:300px;height:480px" src="{{asset('images/')}}{{produit.photo}}" alt="image de {{produit.libelle}}" >
                         <h4>{{produit.nom}}</h4>
                         <p>{{produit.libelle}}</p>
                         <p>{{produit.prix}} €</p>
                         {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
-                            <td class="text-center">
+                            <p class="text-center">
                                 <a href="{{ path('produit.edit', {id: produit.id}) }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon glyphicon-edit"></span>Modifier</button></a>
                                 <a href="{{ path('produit.delete', {id: produit.id}) }}"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span>supprimer</button></a>
-                            </td>
+                            </p>
                         {% endif %}
                         {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
                         <p class="text-center">
