Modif apparence (enlever "avec Twig")

--- a/Projet2_base_silex/App/View/backOff/Produit/add.html.twig
+++ b/Projet2_base_silex/App/View/backOff/Produit/add.html.twig
@@ -4,7 +4,7 @@
     <form method="post" action="{{ path('produit.validFormAdd') }}">
     <div class="row corp modal-content col-lg-6 col-lg-offset-3">
         <fieldset>
-            <legend>Creer un produit (twig)</legend>
+            <legend>Creer un produit</legend>
             <div class="form-group">
                 <div class="form-group row">
                     <label for="example-text-input" class="col-xs-2 col-form-label">Nom</label>
