--- a/Projet2_base_silex/App/View/backOff/Produit/delete.html.twig
+++ b/Projet2_base_silex/App/View/backOff/Produit/delete.html.twig
@@ -6,7 +6,7 @@
     <div class="row col-lg-4 col-lg-offset-4">
 
         <fieldset>
-            <legend>Confirmer la suppression du produit suivant : (avec twig)</legend>
+            <legend>Confirmer la suppression du produit suivant :</legend>
             <input name="id"  type="hidden" value="{{donnees.id}}" />
             <label>Nom : <h5>{{donnees.nom}}</h5> </label>
             <input type="hidden" id="_method" name="_method" value="delete" />
