--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/show.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout.html.twig" %}
 {% block contenu %}
-<div class="row">
+<div class="row" xmlns="http://www.w3.org/1999/html">
     <div class="col-lg-12">
             {% for produit in data if data is not empty %}
                 {% set breakloop = false %}
@@ -22,13 +22,14 @@
                                 <a href="{{ path('produit.edit', {id: produit.id}) }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon glyphicon-edit"></span>Modifier</button></a>
                                 <a href="{{ path('produit.delete', {id: produit.id}) }}"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span>supprimer</button></a>
                             </p>
+                        </div>
                         {% endif %}
                         {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
-                        <p class="text-center">
-                            {% if produit.stock!=panierStock %}
+                            <p class="text-center">
+                                {% if produit.stock!=panierStock %}
                                 <form action="{{ path('panier.add') }}" method="post">
                                     <input name="id" type="hidden" value="{{ produit.id }}">
-                                    <select name="stock" class="">
+                                    <select name="stock" style="color: #0f0f0f">
                                         {% if (produit.stock-panierStock) > 10 %}
                                             {% for i in 1..10%}
                                                 <option value="{{ i }}">
@@ -45,11 +46,12 @@
                                     </select>
                                     <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon glyphicon-plus"></span> Ajouter</button>
                                 </form>
-                            {% else %}
+                            </p>
+                            </div>
+                        {% else %}
                                 Plus de livres en stock
-                            {% endif %}
-                        </p>
-                    </div>
+                                </div>
+                        {% endif %}
                     {% endif %}
                 </div>
             {% endfor %}
