--- a/Projet2_base_silex/App/View/backOff/Produit/edit.html.twig
+++ b/Projet2_base_silex/App/View/backOff/Produit/edit.html.twig
@@ -5,7 +5,7 @@
 			<hr>
 				<div class="row corp modal-content col-lg-6 col-lg-offset-3">
 					<fieldset>
-						<legend>Modifier un produit  (avec twig)</legend>
+						<legend>Modifier un produit</legend>
 						<input name="id"  type="hidden" value="{{donnees.id}}" />
 						<div class="form-group">
 							<div class="form-group row">
