minor view issus fixe

--- a/Projet2_base_silex/App/View/frontOff/ProduitPanier/panierShow.html.twig
+++ b/Projet2_base_silex/App/View/frontOff/ProduitPanier/panierShow.html.twig
@@ -2,61 +2,57 @@
 {% block contenu %}
 {% if   app.session.get('logged') is defined and  app.session.get('logged') == 1 %}
     <div class="col-lg-8 col-lg-offset-2">
-            {% if panier is not empty %}
-                {% set prix_total = 0 %}
-                {% for ligne in panier %}
-                    {% set prix_total=prix_total+ligne.prix*ligne.quantite %}
-                    <table class="table table-responsive table-bordered">
-                    <caption><h4>Mon panier</h4></caption>
-                    <thead>
-                    <tr class="table text-capitalize"><th>nom</th><th>quantité</th><th>prix total</th><th>photo</th>
-                        {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
-                            <th>opérations</th>
-                        {% endif %}
-                        {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
-                            <th>opérations</th>
-                        {% endif %}
+        <table class="table table-responsive table-bordered">
+            <caption><h4>Mon panier</h4></caption>
+            <thead>
+            <tr class="table text-capitalize"><th>nom</th><th>quantité</th><th>prix total</th><th>photo</th>
+                {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITadmin' %}
+                    <th>opérations</th>
+                {% endif %}
+                {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
+                    <th>opérations</th>
+                {% endif %}
 
-                    </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>{{ligne.nom}}</td><td>{{ligne.quantite}}</td><td>{{ligne.prix*ligne.quantite}}</td>
-                            <td>
-                                <img style="width:40px;height:40px" src="{{asset('images/')}}{{ligne.photo}}" alt="image de {{ligne.nom}}" >
-                            </td>
-                            {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
-                                <td>
-                                    <form method="POST" action="{{ path('panier.delete') }}">
-                                        <input name="id" type="hidden" value="{{ ligne.idPanier }}">
-                                        <select name="delete_quantite" class="">
-                                            {% for i in 1..ligne.quantite%}
-                                                <option value="{{ i }}">
-                                                    {{ i }}
-                                                </option>
-                                            {% endfor %}
-                                        </select>
-                                        <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span> supprimer</button>
-                                    </form>
-                                </td>
-                            {% endif %}
-                        </tr>
-                    {% if prix_total!=0 %}
-                        <tr>
-                            <td colspan="4" class="text-info" >
-                                <h4>Valeur total : {{ prix_total }}</h4>
-                            </td>
-                            <td>
-                                <a href="{{ path('Commande.ValidCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span>Confirmer la commande</button></a>
-                            </td>
-                        </tr>
+            </tr>
+            </thead>
+            <tbody>
+            {% set prix_total=0 %}
+            {% for ligne in panier if panier is not empty %}
+                {% set prix_total=prix_total+ligne.prix*ligne.quantite %}
+                <tr>
+                    <td>{{ligne.nom}}</td><td>{{ligne.quantite}}</td><td>{{ligne.prix*ligne.quantite}}</td>
+                    <td>
+                        <img style="width:40px;height:40px" src="{{asset('images/')}}{{ligne.photo}}" alt="image de {{ligne.nom}}" >
+                    </td>
+                    {% if   app.session.get('droit') is defined and  app.session.get('droit') == 'DROITclient' %}
+                        <td>
+                            <form method="POST" action="{{ path('panier.delete') }}">
+                                <input name="id" type="hidden" value="{{ ligne.idPanier }}">
+                                <select name="delete_quantite" class="">
+                                    {% for i in 1..ligne.quantite%}
+                                        <option value="{{ i }}">
+                                            {{ i }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                                <button type="submit" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon glyphicon-minus"></span> supprimer</button>
+                            </form>
+                        </td>
                     {% endif %}
-                    </tbody>
-                </table>
-                {% endfor %}
-            {% else %}
-                <h3>Votre Panier est vide</h3>
+                </tr>
+            {% endfor %}
+            {% if prix_total!=0 %}
+                <tr>
+                    <td colspan="4" class="text-info text-uppercase" >
+                        <h4>Valeur total : {{ prix_total }}</h4>
+                    </td>
+                    <td>
+                        <a href="{{ path('Commande.ValidCommand') }}"><button type="submit" class="btn btn-sm btn-success"><span class="glyphicons glyphicon glyphicons-shopping-cart"></span>Passer la commande</button></a>
+                    </td>
+                </tr>
             {% endif %}
+            <tbody>
+        </table>
     </div>
 {% else %}
     <p>Panier Vide</p>
