--- a/Projet2_base_silex/App/View/general/accueil.html.twig
+++ b/Projet2_base_silex/App/View/general/accueil.html.twig
@@ -55,8 +55,26 @@
 		</a>
 	</div>
 	<h1 class="text-center">Manga Buyers : Le site pour vos mangas</h1>
+	<hr>
+    <div class="row">
+        <div class="col-lg-6 text-center">
+            <img src="{{asset('images/manga.png')}}" alt="logo">
+        </div>
+        <div class="col-lg-6">
+            <h2>lorem</h2>
+
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+            <p><span class="glyphicon glyphicon-info-sign"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam culpa cum dolore dolorum expedita harum in ipsam labore magnam modi nesciunt, perferendis placeat quam rem repudiandae, sit soluta ullam.</p>
+        </div>
+    </div>
+    <hr>
 </div>
-	    <hr>
 {% endblock %}
 
 
