--- a/Projet2_base_silex/App/View/backOff/Produit/edit.html.twig
+++ b/Projet2_base_silex/App/View/backOff/Produit/edit.html.twig
@@ -61,7 +61,7 @@
                             <input type="hidden" id="_method" name="_method" value="put" />
 
                             <hr>
-							<button type="submit" class="btn btn-success btn-block" value="modifier"><span class="glyphicon glyphicon-plus"></span> Modifier</button>
+							<button type="submit" class="btn btn-success btn-block" value="modifier"><span class="glyphicon glyphicon-edit"></span> Modifier</button>
 							<hr>
 						</div>
 					</fieldset>
